# remext

./: .gitignore  Cargo.toml  Jenkinsfile  README.md  build-pod.yaml  mix.exs
config/: config.exs  release.exs
lib/: json_manager.ex  remext.ex
src/: json_manager.rs  main.rs
test/: remext_test.exs
