[package]
name = "remext"
version = "0.3.2"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
home_path = []

[dependencies]
home = "0.5.5"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
clap = "2.33"
cli-clipboard = "0.4.0"
